packages/beatui/src/styles/layers/03.components/number-input.css
/* Number Input Component */
.bc-number-input {
  text-align: end;
}

/* Remove default number input spinners */
.bc-number-input::-webkit-outer-spin-button,
.bc-number-input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.bc-number-input[type='number'] {
  -moz-appearance: textfield;
}

/* Number Input Unit Label */
.bc-number-input-unit {
  display: flex;
  align-items: center;
  padding-inline-start: 0;
  margin-left: calc(-1 * var(--spacing-md));
  padding-inline-end: var(--spacing-md);
  color: var(--color-neutral-500);
  font-size: var(--font-size-sm);
  white-space: nowrap;
  user-select: none;
}

.bc-control--padding-xs .bc-number-input-unit {
  margin-left: calc(-1 * var(--spacing-xs));
  padding-inline-end: var(--spacing-xs);
}

.bc-control--padding-sm .bc-number-input-unit {
  margin-left: calc(-1 * var(--spacing-sm));
  padding-inline-end: var(--spacing-sm);
}

.bc-control--padding-md .bc-number-input-unit {
  margin-left: calc(-1 * var(--spacing-md));
  padding-inline-end: var(--spacing-md);
}

.bc-control--padding-lg .bc-number-input-unit {
  margin-left: calc(-1 * var(--spacing-lg));
  padding-inline-end: var(--spacing-lg);
}

.bc-control--padding-xl .bc-number-input-unit {
  margin-left: calc(-1 * var(--spacing-xl));
  padding-inline-end: var(--spacing-xl);
}

.dark .bc-number-input-unit {
  color: var(--color-neutral-400);
}

/* Number Input Steppers */
.bc-number-input-steppers {
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: space-between;
}

.bc-number-input-steppers-button {
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  line-height: var(--line-height-none);
  border-radius: var(--radius-xs);
  outline: var(--outline-width-default) solid var(--color-gray-300);
  outline-offset: calc(-1 * var(--outline-width-default));
  cursor: pointer;
  transition: all
    var(--motion-transition-fast, var(--motion-duration-fast, 0.2s))
    var(--motion-easing-standard, cubic-bezier(0.2, 0, 0, 1));

  width: var(--spacing-lg);
  height: 50%;
}

.bc-number-input-steppers-button:hover {
  background-color: var(--color-neutral-100);
}

.bc-number-input-steppers .bc-button:hover:not(:disabled) {
  transform: none;
}

.bc-number-input-steppers .bc-button:active:not(:disabled) {
  transform: none;
}

/* Dark mode */
.dark .bc-number-input-steppers-button {
  outline-color: var(--color-base-600);
}

.dark .bc-number-input-steppers-button:hover {
  background-color: var(--color-base-700);
}

